--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^5.5.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17"
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.2.3"
   }
 }
